<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@drawable/start_background">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:layout_marginHorizontal="20dp">

        <ImageView
            android:id="@+id/image"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="70dp"
            android:src="@drawable/chats" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:layout_below="@+id/image"
            android:background="@color/bluegeay300"
            android:layout_marginBottom="10dp"/>

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:layout_below="@+id/email"
            android:background="@color/bluegeay300"
            android:padding="10dp"
            android:layout_marginBottom="10dp"/>

        <Button
            android:id="@+id/loginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/bluegeay500"
            android:text="@string/login"
            android:textColor="#ffffff"
            android:layout_below="@+id/password"
            android:layout_marginTop="10dp"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/dont_account"
            android:text="Don't have an account"
            android:textColor="@color/black"
            android:padding="10dp"
            android:textSize="15sp"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/loginButton"
            android:layout_marginTop="12dp"
            android:layout_alignParentRight="true" />

    </RelativeLayout>
   </RelativeLayout>